<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--MainVC-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="PriceCalculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="darkbg.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="UC5-Dr-grK">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cWY-10-Pl7">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ojD-nq-9sc" customClass="CurrencyTextField" customModule="PriceCalculator" customModuleProvider="target">
                                        <rect key="frame" x="38" y="272" width="299" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="wageTf"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                    </textField>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpq-N0-83z">
                                        <rect key="frame" x="114.5" y="421" width="146" height="53"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="hoursLabel" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrA-un-ftN" userLabel="hoursLabel">
                                                <rect key="frame" x="0.0" y="0.0" width="146" height="37"/>
                                                <accessibility key="accessibilityConfiguration" hint="hoursLabel" identifier="hoursLabel" label="hoursLabel"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="37" id="JqC-PK-4nE"/>
                                                    <constraint firstAttribute="width" constant="146" id="mq0-Dq-nux"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThK-JG-Osf">
                                                <rect key="frame" x="58" y="39" width="30" height="14"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstItem="ThK-JG-Osf" firstAttribute="top" secondItem="mrA-un-ftN" secondAttribute="bottom" constant="2" id="3WO-OG-8Ix"/>
                                            <constraint firstAttribute="bottom" secondItem="ThK-JG-Osf" secondAttribute="bottom" id="95c-Fh-tVb"/>
                                            <constraint firstItem="mrA-un-ftN" firstAttribute="leading" secondItem="cpq-N0-83z" secondAttribute="leading" id="CVL-S9-FSZ"/>
                                            <constraint firstItem="mrA-un-ftN" firstAttribute="top" secondItem="cpq-N0-83z" secondAttribute="top" id="VxS-U6-Enp"/>
                                            <constraint firstItem="mrA-un-ftN" firstAttribute="centerX" secondItem="ThK-JG-Osf" secondAttribute="centerX" id="tE8-9G-iVp"/>
                                            <constraint firstItem="mrA-un-ftN" firstAttribute="centerX" secondItem="cpq-N0-83z" secondAttribute="centerX" id="ttQ-2y-Q5W"/>
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3YH-ZX-EVu" customClass="CurrencyTextField" customModule="PriceCalculator" customModuleProvider="target">
                                        <rect key="frame" x="38" y="322" width="299" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="priceTf"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                    </textField>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.73654819542253525" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="3YH-ZX-EVu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cWY-10-Pl7" secondAttribute="leading" constant="38" id="1kU-HY-WL9"/>
                                    <constraint firstItem="ojD-nq-9sc" firstAttribute="top" secondItem="cWY-10-Pl7" secondAttribute="top" constant="272" id="89l-js-Wgj"/>
                                    <constraint firstItem="3YH-ZX-EVu" firstAttribute="centerX" secondItem="cWY-10-Pl7" secondAttribute="centerX" id="Mbz-9w-R3i"/>
                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="3YH-ZX-EVu" secondAttribute="trailing" constant="38" id="NFE-Yr-6rz"/>
                                    <constraint firstItem="cpq-N0-83z" firstAttribute="centerX" secondItem="cWY-10-Pl7" secondAttribute="centerX" id="Ri6-1f-lU9"/>
                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="ojD-nq-9sc" secondAttribute="trailing" constant="38" id="WFy-jP-coi"/>
                                    <constraint firstItem="3YH-ZX-EVu" firstAttribute="top" secondItem="ojD-nq-9sc" secondAttribute="bottom" constant="20" id="mVx-UW-BgH"/>
                                    <constraint firstItem="cpq-N0-83z" firstAttribute="top" secondItem="3YH-ZX-EVu" secondAttribute="bottom" constant="69" id="rTb-xt-3xZ"/>
                                    <constraint firstItem="ojD-nq-9sc" firstAttribute="centerX" secondItem="cWY-10-Pl7" secondAttribute="centerX" id="uSQ-ob-gVD"/>
                                    <constraint firstItem="ojD-nq-9sc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cWY-10-Pl7" secondAttribute="leading" constant="38" id="wUq-AS-GWc"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="UC5-Dr-grK" secondAttribute="trailing" id="0nC-SD-eMV"/>
                            <constraint firstItem="UC5-Dr-grK" firstAttribute="trailing" secondItem="cWY-10-Pl7" secondAttribute="trailing" id="9ry-N5-Fje"/>
                            <constraint firstItem="UC5-Dr-grK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EeW-RX-6og"/>
                            <constraint firstItem="cWY-10-Pl7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="NQO-VS-bU8"/>
                            <constraint firstItem="cWY-10-Pl7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="c26-27-62g"/>
                            <constraint firstItem="UC5-Dr-grK" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="du3-5r-qMc"/>
                            <constraint firstItem="UC5-Dr-grK" firstAttribute="leading" secondItem="cWY-10-Pl7" secondAttribute="leading" id="vzS-UO-2Yj"/>
                            <constraint firstItem="UC5-Dr-grK" firstAttribute="top" secondItem="cWY-10-Pl7" secondAttribute="top" id="xrM-JW-mYz"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="hourLabel" destination="mrA-un-ftN" id="zzG-ne-1OO"/>
                        <outlet property="priceTf" destination="3YH-ZX-EVu" id="WXO-eJ-fTv"/>
                        <outlet property="showLabel" destination="ThK-JG-Osf" id="YLz-72-tiI"/>
                        <outlet property="wageTf" destination="ojD-nq-9sc" id="zeu-R3-BcG"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
        </scene>
    </scenes>
    <resources>
        <image name="darkbg.jpg" width="3888" height="5184"/>
    </resources>
</document>
