...
        hourLabel.accessibilityIdentifier = "hoursLabel"
        labelsToToggle = [showLabel, hourLabel]
        
        let _ = labelsToToggle.map({ $0.isHidden = true })
        let calcBtn = UIButton(frame: CGRect(x: 0, y: 0, width: view.frame.size.width, height: 50))
        calcBtn.backgroundColor = UIColor.gray
        calcBtn.setTitle("Calculate", for: .normal)
        calcBtn.setTitleColor(.black, for: .normal)
        calcBtn.addTarget(self, action: #selector(self.calculateBtnClicked), for: .touchUpInside)
        
        priceTf.inputAccessoryView = calcBtn
        wageTf.inputAccessoryView = calcBtn
        // Do any additional setup after loading the view, typically from a nib.
...
